--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-social-icons": "^6.20.0",
+    "react-toastify": "^11.0.3",
     "tailwind-merge": "^2.6.0",
     "three": "^0.172.0"
   },
