--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/fiber": "^8.17.12",
     "@tabler/icons-react": "^3.29.0",
+    "@vercel/analytics": "^1.4.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.1",
     "mini-svg-data-uri": "^1.4.4",
