--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/fiber": "^8.17.12",
+    "@react-three/fiber": "^8.18.0",
     "@tabler/icons-react": "^3.29.0",
     "@vercel/analytics": "^1.4.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.3",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.0.3",
-    "next": "15.1.5",
+    "next": "^15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
