--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.0.3",
     "next": "^15.3.1",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-social-icons": "^6.20.0",
-    "react-toastify": "^11.0.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.172.0"
   },
   "devDependencies": {
