--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-three/fiber": "^8.18.0",
     "@tabler/icons-react": "^3.29.0",
     "@vercel/analytics": "^1.4.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.3",
     "mini-svg-data-uri": "^1.4.4",
